# react-fastapi

backend/: .env  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 40bbd488dafc_added_cascading_account_to_transactions.py  5e8ebd49104e_init_db.py  62b5a483a3fb_added_cascading_account_to_transactions2.py  6d0cc8b11836_added_cascading_account_to_transactions3.py  a61801577c94_added_unique_constraint_to_user_table_.py
backend/assets/: db_helpers.py  dependencies.py  imports.py  model.py
backend/configs/: database.py
backend/controllers/: account.py  transactions.py  user.py
backend/models/: account.py  transactions.py  user.py
backend/schemas/: account.py  transactions.py  user.py
backend/service/: security.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/ActionBlock/: index.jsx  styles.js
frontend/src/components/Button/: index.jsx  styles.js
frontend/src/components/Header/: index.jsx  styles.js
frontend/src/components/HeaderUnlogged/: index.jsx  styles.js
frontend/src/components/HistoryBlock/: index.jsx  styles.js
frontend/src/components/Input/: index.jsx  styles.js
frontend/src/components/OptionBlock/: index.jsx  styles.js
frontend/src/components/TableRow/: index.jsx
frontend/src/components/logo/: index.jsx  styles.js
frontend/src/pages/history/: index.jsx
frontend/src/pages/home/: index.jsx  styles.js
frontend/src/service/: api.js
frontend/src/styles/: global.js
(+3 files in other folders)
